# low-latency-execution-gateway

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Readme.md  aa.txt
.github/workflows/: ci.yml  nightly_perf.yml
apps/: CMakeLists.txt  fgep_benchmark_report.cpp  fgep_spsc_perf_report.cpp  fgep_spsc_queue_perf.cpp
benchmarks/: CMakeLists.txt  book_benchmark.cpp  encoded_submit_benchmark.cpp  encoded_submit_hotpath_benchmark.cpp  hotpath_benchmark.hpp  instrument_directory_benchmark.cpp  lifecycle_benchmark.cpp  order_lifecycle_benchmark.cpp  pipeline_benchmark.cpp  replay_decode_benchmark.cpp  symbol_order_book_benchmark.cpp
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake  Sanitizers.cmake  ThirdParty.cmake
cpp/bench/: csv_writer.h  google_benchmark.cpp  main.cpp  scenarios.h  stats.h  work.h
cpp/common/: affinity.cpp  affinity.h  cacheline.h  cli.h  platform.h  sysinfo.cpp  sysinfo.h  time_ns.h
cpp/perf/: perf_events.cpp  perf_events.h
cpp/pipeline/: pipeline.h
cpp/queues/: mpsc_vyukov.h  mutex_queue.h  queue_concept.h  ring_buffer_spsc.h
cpp/tests/: test_ring_buffer.cpp
docs/: cache_tlb_tuning.md  ci.md  methodology.md  network_benchmarking.md  perf_tooling.md  profiling.md  results.md  runtime_memory_model.md  runtime_threading_model.md
docs/Sources/: ISO10383_MIC.csv  ec2_dpdk_setup.md
ec2-notes/: perf_environment.txt
include/fgep/bbo/: normalized_bbo.hpp
include/fgep/bench/: backend_benchmark.hpp  benchmark_report.hpp  execution_benchmark.hpp  order_candidate_generator.hpp  system_metadata.hpp  wall_clock_backend_benchmark.hpp
include/fgep/book/: book_types.hpp  multi_venue_book.hpp  symbol_order_book.hpp  venue_book.hpp
include/fgep/core/: errors.hpp  market_event.hpp  order_event.hpp  spsc_ring.hpp  time.hpp  types.hpp
include/fgep/execution/: afxdp_backend.hpp  async_execution_backend.hpp  backend_factory.hpp  backend_submit_queue.hpp  dpdk_backend.hpp  encoded_backend_submit.hpp  execution_backend.hpp  kernel_udp_backend.hpp  order_lifecycle.hpp  queued_execution_backend.hpp  simulated_execution_engine.hpp
python/: plot_hist.py
reports/2026-05-17_152501/: backend_benchmark.md
reports/2026-05-17_192222/: execution_benchmark.md  guardrail_update_benchmark.md
reports/2026-05-17_232252/: backend_benchmark.md  execution_benchmark.md  guardrail_update_benchmark.md
reports/2026-05-18_051856/: backend_benchmark.md  execution_benchmark.md  guardrail_update_benchmark.md
reports/2026-05-18_065105/: backend_benchmark.md  execution_benchmark.md  guardrail_update_benchmark.md  wall_clock_backend_benchmark.md
reports/2026-05-18_162936/: backend_benchmark.md  execution_benchmark.md  guardrail_update_benchmark.md  wall_clock_backend_benchmark.md
reports/2026-05-27_085809/: backend_benchmark.md  execution_benchmark.md  guardrail_update_benchmark.md  wall_clock_backend_benchmark.md
reports/2026-05-27_090559/: backend_benchmark.md  execution_benchmark.md  guardrail_update_benchmark.md  wall_clock_backend_benchmark.md
reports/perf/: ec2-aws-ena-dpdk-spsc-queue-report-20260519-041948.md  ec2-aws-ena-dpdk-spsc-queue-report-20260519-060833.md  ec2-aws-ena-dpdk-spsc-queue-report-20260519-061509.md  ec2-queued-backend-perf.txt  ec2-spsc-queue-perf-final.txt  ec2-spsc-queue-perf-fixed.txt  ec2-spsc-queue-perf.txt  ec2-spsc-queue-report.md  smoke-perf-stat.txt  wsl-spsc-queue-perf-20260519-055148.txt  wsl-spsc-queue-perf-final.txt  wsl-spsc-queue-report-20260519-055148.md  wsl-spsc-queue-report-20260519-070152.md
reports/profile-test/: out.folded  perf.data  perf.script
scripts/: build.sh  build_release.sh  ci_nightly_perf.sh  profile_flamegraph.sh  run_benchmarks.sh  run_perf_record.sh  run_perf_stat.sh  system_info.sh  test.sh  test_release.sh
src/bbo/: normalized_bbo.cpp
src/bench/: backend_benchmark.cpp  benchmark_report.cpp  execution_benchmark.cpp  order_candidate_generator.cpp  system_metadata.cpp  wall_clock_backend_benchmark.cpp
src/book/: multi_venue_book.cpp  symbol_order_book.cpp  venue_book.cpp
src/core/: time.cpp  types.cpp
src/execution/: afxdp_backend.cpp  backend_factory.cpp  dpdk_backend.cpp  encoded_backend_submit.cpp  execution_backend.cpp  kernel_udp_backend.cpp  order_lifecycle.cpp  simulated_execution_engine.cpp
src/gate/: guardrail_control.cpp  guardrail_state.cpp  guardrail_update_benchmark.cpp  permissive_gate.cpp
src/instrument/: instrument_directory.cpp
src/itch/: itch_decode.cpp  itch_encode.cpp
src/moldudp64/: moldudp64_decode.cpp  moldudp64_encode.cpp
src/ouch/: ouch_decode.cpp  ouch_encode.cpp
src/reference/: symbol_fixture.cpp  venue_fixture.cpp
src/replay/: itch_replay_apply.cpp  moldudp64_itch_replay.cpp
src/risk/: risk_supervisor.cpp
src/runtime/: no_heap_guard.cpp  runtime_phase.cpp
src/telemetry/: latency_summary.cpp  pipeline_telemetry.cpp
src/wire/: byte_io.cpp
tests/: CMakeLists.txt  gtest_core_types.cpp  gtest_latency_summary.cpp  test_afxdp_backend.cpp  test_async_execution_backend.cpp  test_backend_benchmark.cpp  test_backend_factory.cpp  test_backend_submit_queue.cpp  test_benchmark_report.cpp  test_core_stats.cpp  test_core_types.cpp  test_dpdk_backend.cpp  test_encoded_backend_submit.cpp  test_errors.cpp  test_execution_backend.cpp  test_execution_benchmark.cpp  test_execution_scenarios.cpp  test_fixed_ascii.cpp  test_fpga_gate_interface.cpp  test_guardrail_control.cpp  test_guardrail_state.cpp  test_guardrail_update_benchmark.cpp  test_instrument_directory.cpp  test_itch_decode_encode.cpp  test_itch_instrument_directory_integration.cpp  test_itch_message_type.cpp  test_itch_stock_directory_decode_encode.cpp  test_itch_stock_trading_action_decode_encode.cpp  test_kernel_udp_backend.cpp  test_latency_summary.cpp  test_lifecycle_engine.cpp  test_market_events.cpp  test_moldudp64_decode.cpp  test_moldudp64_decode_encode.cpp  test_moldudp64_itch_integration.cpp  test_moldudp64_itch_replay.cpp  test_multi_venue_book_and_bbo.cpp  test_no_heap_guard.cpp  test_order_candidate_generator.cpp  test_ouch_decode_encode.cpp  (+13 more)
(+42 files in other folders)
